<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dexi_camera</name>
  <version>0.0.1</version>
  <description>Camera package for Pi5 and Arudcam 12 MP UVC Module</description>
  <maintainer email="db@droneblocks.io">Dennis Baldwin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>camera_info_manager</depend>
  <depend>camera_calibration_parsers</depend>

  <!-- Python dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>camera_info_manager_py</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-picamera2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>